# mnist-rs

./: .gitignore  Cargo.toml  Makefile  README.md
crates/app/: Cargo.toml
crates/app/src/: lib.rs  services.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: main.rs  mock_classifier.rs  routes.rs  server.rs  state.rs  templates.rs
crates/http-server/src/handlers/: api.rs  page.rs
crates/http-server/templates/: index.html
crates/nn-engine/: Cargo.toml
crates/nn-engine/src/: lib.rs
crates/nn-engine/src/adapter/: async_ndarray_engine.rs  file_repository.rs  mod.rs  ndarray_engine.rs
crates/nn-engine/src/application/: digit_classifier_service.rs  mod.rs
crates/nn-engine/src/domain/: error.rs  mod.rs  model_state.rs  prediction.rs  train.rs
crates/nn-engine/src/port/: async_classifier.rs  classifier.rs  mod.rs  model_repository.rs
crates/wasm-inference/: Cargo.toml
crates/wasm-inference/src/: lib.rs  wasm_api.rs
docs/: index.html  model.json
docs/pkg/: package.json  wasm_inference.d.ts  wasm_inference.js  wasm_inference_bg.wasm  wasm_inference_bg.wasm.d.ts
