[package]
name = "http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
nn-engine = { path = "../nn-engine" }

async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = { version = "0.15", default-features = false, features = ["std", "derive"] }


[dev-dependencies]
http-body-util = "0.1.0"
tower = { version = "0.5.2", features = ["util"] }
