[package]
name = "nn-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.6.0"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

tokio = { version = "1.49", features = ["full"] }

reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
zip = "0.6"
csv = "1.3"