[package]
name = "nn-engine"
version = "0.1.0"
edition = "2024"

[features]
default = ["server"]

server = [
    "tokio",
    "reqwest",
    "futures-util",
    "zip",
    "csv",
    "async-trait"
]

wasm = []

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.6"
serde = { version = "1", features = ["derive"] }

# optional deps
async-trait = { version = "0.1", optional = true }
tokio = { version = "1.49", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["stream"], optional = true }
futures-util = { version = "0.3", optional = true }
zip = { version = "0.6", optional = true }
csv = { version = "1.3", optional = true }

bincode = "1.3"