[package]
name = "wasm-inference"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nn-engine = {path = "../nn-engine", default-features = false}
wasm-bindgen = "0.2"
ndarray = { version = "0.15", default-features = false }
ndarray-rand = "0.14"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"


